[project]
name = "comfyui-sana"
description = "ComfyUI nodes for the SANA family (regular SANA and SANA-Sprint) via diffusers."
version = "0.1.0"
license = {file = "LICENSE"}
dependencies = [
    "diffusers>=0.33.0",
    "transformers>=4.49.0",
    "accelerate",
    "sentencepiece",
]

[project.urls]
Repository = "https://github.com/gtaghon/ComfyUI-SANA"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "gtaghon"
DisplayName = "ComfyUI-SANA"
Icon = ""
